[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/RobotFlying/robot_flying.png" type="Texture" id=1]
[ext_resource path="res://Enemies/RobotFlying/RobotFlying.gd" type="Script" id=2]
[ext_resource path="res://Enemies/laser_shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Enemies/explosion_robot.wav" type="AudioStream" id=4]
[ext_resource path="res://Enemies/RobotFlying/robot_eye.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Eye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Eye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "telegraph"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 2 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "flying"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[node name="RobotFlying" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="ProjectileSpawn" type="Position2D" parent="Body"]
position = Vector2( 4, -1 )

[node name="HeadSpawn" type="Position2D" parent="Body"]
position = Vector2( -1, -1 )

[node name="BodySpawn" type="Position2D" parent="Body"]
position = Vector2( 0, 2 )

[node name="Eye" type="Sprite" parent="Body"]
position = Vector2( 0, -4 )
texture = ExtResource( 5 )
centered = false
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="TelegraphTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
max_distance = 650.0

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0
max_distance = 670.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/shoot = SubResource( 4 )
anims/telegraph = SubResource( 5 )

[node name="EffectsPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/flying = SubResource( 7 )

[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="TelegraphTimer" to="." method="_on_TelegraphTimer_timeout"]
[connection signal="finished" from="ExplosionSound" to="." method="_on_ExplosionSound_finished"]
